force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/Preferred_Service_Report_Language__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Service_Report_Language__c</fullName>
    <description>select preferred language from the picklist values and have all Service Reports generated by default to selected language.</description>
    <label>Preferred Service Report Language</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
                <default>true</default>
                <label>English</label>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>