force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/Related_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Related_User_Email__c</fullName>
    <description>Field to store Salesforce User's Email</description>
    <formula>SVMXC__Salesforce_User__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related User Email</label>
    <type>Text</type>
</CustomField>