force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__Average_Drive_Time__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Average_Drive_Time__c</fullName>
    <label>Average Drive Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>