force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__Average_Speed__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Average_Speed__c</fullName>
    <description>Average traveling speed for the technician</description>
    <label>Average Speed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>