force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__Break_Duration__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Break_Duration__c</fullName>
    <description>Duration of technician&apos;s break in minutes</description>
    <label>Break Duration</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>