force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__City__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__City__c</fullName>
    <description>“City” part of the technician&apos;s address</description>
    <inlineHelpText>“City” part of the technician&apos;s address</inlineHelpText>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>