force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__Email__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Email__c</fullName>
    <description>Email of the technician</description>
    <inlineHelpText>Email of the technician</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>