force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__Latlong_Captured_On__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Latlong_Captured_On__c</fullName>
    <description>Used to to capture the Time stamp when Current Lat/Long was updated on technician record.</description>
    <label>Latlong Captured On</label>
    <type>DateTime</type>
</CustomField>