force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__Per_Mile_Cost__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Per_Mile_Cost__c</fullName>
    <description>Average travel cost per mile for the technician. Used in dispatch optimization</description>
    <label>Per Mile Cost</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>