force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__Phone__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Phone__c</fullName>
    <description>Telephone number of the technician</description>
    <inlineHelpText>Telephone number of the technician</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>