force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__Salesforce_User__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Salesforce_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to an existing salesforce User.</description>
    <inlineHelpText>Lookup to an existing salesforce User.</inlineHelpText>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>