force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Service_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service territory to which this technician belongs. Reference to an existing Territory record in ServiceMax</description>
    <label>Service Territory</label>
    <referenceTo>SVMXC__Territory__c</referenceTo>
    <relationshipLabel>Technician/Equipment</relationshipLabel>
    <relationshipName>Service_Group_Members</relationshipName>
    <type>Lookup</type>
</CustomField>