force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__SM_Overnight_Stay_Policy__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__SM_Overnight_Stay_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>look up field for overnight policy in the technician object</description>
    <inlineHelpText>look up field for overnight policy in the technician object</inlineHelpText>
    <label>Overnight Stay Policy</label>
    <referenceTo>SVMXC__SM_Overnight_Stay_Policy__c</referenceTo>
    <relationshipLabel>Technician/Equipment</relationshipLabel>
    <relationshipName>Technician_Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>