force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__State__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__State__c</fullName>
    <description>“State” part of the technician&apos;s address</description>
    <inlineHelpText>“State” part of the technician&apos;s address</inlineHelpText>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>