force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__Street__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Street__c</fullName>
    <description>“Street” part of the technician&apos;s address</description>
    <inlineHelpText>“Street” part of the technician&apos;s address</inlineHelpText>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>