force-app/main/default/objects/SVMXC__Service_Group_Members__c/fields/SVMXC__Zip__c.field-meta.xml
<CustomField>
    <fullName>SVMXC__Zip__c</fullName>
    <description>“Zip code” part of the technician&apos;s address</description>
    <inlineHelpText>“Zip code” part of the technician&apos;s address</inlineHelpText>
    <label>Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>