force-app/main/default/objects/SVMXC__Service_Group_Members__c/validationRules/CheckEditOnPreferredSRLanguage.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckEditOnPreferredSRLanguage</fullName>
    <active>true</active>
    <description>Prevents edit on fields other than Preferred Service Report Language for business profiles.</description>
    <errorConditionFormula>AND(
  NOT($Profile.Name ==$Label.ProfileSystemAdmin),
  NOT($Profile.Name ==$Label.Integration_SAP_Service),
  NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
  OR(
     ISCHANGED(Name),
     ISCHANGED(SVMXC__Service_Group__c)
   )
)</errorConditionFormula>
    <errorMessage>Only System Administrator can edit fields other than Preferred Service Report Language.</errorMessage>
</ValidationRule>